#!/usr/bin/env python3
"""
Example 10: Full System Integration (å®Œæ•´ç³»ç»Ÿé›†æˆ)

Demonstrates:
- Complete ChanLun analysis pipeline
- Fractal â†’ Pen â†’ Segment â†’ Divergence â†’ BSP
- Real-time monitoring setup
- Multi-timeframe analysis
- Risk management integration

This is the complete trading system in action.
"""

import sys
sys.path.insert(0, '../python-layer')

from datetime import datetime, timezone
from trading_system.kline import Kline, TimeFrame
from trading_system.fractal import FractalDetector
from trading_system.client import TradingClient


def run_full_analysis():
    """Run complete ChanLun analysis pipeline"""
    
    print("\n" + "=" * 70)
    print("  ChanLun Invester - Full System Integration")
    print("  ç¼ è®ºæŠ•èµ„ç³»ç»Ÿ - å®Œæ•´ç³»ç»Ÿé›†æˆ")
    print("=" * 70)
    
    # Step 1: Connect to server
    print("\nğŸ“¡ Step 1: Connecting to trading server...")
    client = TradingClient("localhost", 50051)
    
    if not client.connect(timeout=2):
        print("   âš ï¸  Server not running - showing architecture overview")
        print_architecture()
        return
    
    print("   âœ“ Connected")
    
    # Step 2: Get system status
    print("\nğŸ“Š Step 2: System Status")
    status = client.get_status()
    if status:
        print(f"   Active Engine: {status.active_engine}")
        print(f"   Failover: {'Enabled' if status.failover_enabled else 'Disabled'}")
        print(f"   Health: {'Healthy' if status.health == 1 else 'Degraded/Unhealthy'}")
    
    # Step 3: Health check
    print("\nâ¤ï¸ Step 3: Health Check")
    health = client.health_check("rust")
    if health:
        print(f"   Rust Engine: {health.message}")
    
    # Step 4: Analysis pipeline overview
    print("\nğŸ”„ Step 4: Analysis Pipeline")
    print("   1. Load K-line data â†’ SubmitKlines()")
    print("   2. Detect fractals â†’ Automatic in server")
    print("   3. Calculate pens â†’ CalculatePens()")
    print("   4. Identify segments â†’ CalculateSegments()")
    print("   5. Detect divergence â†’ Internal (MACD comparison)")
    print("   6. Find B/S points â†’ Internal (pattern matching)")
    print("   7. Generate signals â†’ Return to client")
    
    # Step 5: Example workflow
    print("\nğŸ“ˆ Step 5: Example Workflow")
    print("   (Would execute with live data when server running)")
    
    client.close()
    
    print("\n" + "=" * 70)
    print("âœ… Full System Overview Complete!")
    print("\nSystem Architecture:")
    print("   â”Œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”     gRPC     â”Œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”")
    print("   â”‚   Python    â”‚â—„â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â–ºâ”‚    Rust     â”‚")
    print("   â”‚   Client    â”‚              â”‚   Server    â”‚")
    print("   â”‚  (Backup)   â”‚              â”‚  (Primary)  â”‚")
    print("   â””â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”˜              â””â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”˜")
    print("         â”‚                            â”‚")
    print("         â”‚                            â”œâ”€â–º Fractal Detection")
    print("         â”‚                            â”œâ”€â–º Pen Calculation")
    print("         â”‚                            â”œâ”€â–º Segment Division")
    print("         â”‚                            â”œâ”€â–º MACD/Divergence")
    print("         â”‚                            â””â”€â–º B/S Points")
    print("\nNext Steps:")
    print("   1. Start server: cargo run --bin trading-server")
    print("   2. Load real market data")
    print("   3. Configure alerts for B/S points")
    print("   4. Enable auto-trading (optional)")
    print("=" * 70 + "\n")


def print_architecture():
    """Print system architecture when server is offline"""
    
    print("\n" + "=" * 70)
    print("  System Architecture Overview")
    print("=" * 70)
    
    print("\nğŸ“¦ Components:")
    print("   Rust Core (rust-core/):")
    print("      âœ“ kline/     - K-line data structures")
    print("      âœ“ fractal/   - Fractal detection")
    print("      âœ“ pen/       - Pen theory (æ–°ç¬” 3-Kline)")
    print("      âœ“ segment/   - Segment division (ç‰¹å¾åºåˆ—)")
    print("      âœ“ indicators/- MACD with configurable params")
    print("      âœ“ divergence/- Divergence detection")
    print("      âœ“ bsp/       - Buy/Sell points (1/2/3 ä¹°/å–)")
    print("      âœ“ health/    - Health monitoring + failover")
    print("      âœ“ metrics/   - Performance metrics")
    print("      âœ“ grpc/      - gRPC service")
    
    print("\n   Python Layer (python-layer/):")
    print("      âœ“ kline.py   - K-line structures (backup)")
    print("      âœ“ fractal.py - Fractal detection (backup)")
    print("      âœ“ client.py  - gRPC client")
    print("      âœ“ pb files   - Generated proto stubs")
    
    print("\nğŸ”„ Data Flow:")
    print("   Market Data â†’ K-lines â†’ Fractals â†’ Pens â†’ Segments")
    print("                                      â†“")
    print("                              MACD/Divergence")
    print("                                      â†“")
    print("                              Buy/Sell Points")
    print("                                      â†“")
    print("                              Trading Signals")
    
    print("\nğŸ“Š Current Status:")
    print("   Phase 1: âœ… Core modules (Fractal/Pen/Segment)")
    print("   Phase 2: âœ… Analysis (Divergence/BSP)")
    print("   Phase 3: ğŸ”„ Examples (10 progressive)")
    print("   Phase 4: â³ Polish & Deployment")


def main():
    run_full_analysis()


if __name__ == "__main__":
    main()
